// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-progress should render indeterminate state 1`] = `
<modus-wc-progress class="modus-wc-progress-container" indeterminate="" value="0">
  <!---->
  <progress aria-busy="true" aria-label="Custom Progress Bar" class="modus-wc-progress modus-wc-w-full"></progress>
</modus-wc-progress>
`;

exports[`modus-wc-progress should render label below progress and associate it with aria-labelledby 1`] = `
<modus-wc-progress class="modus-wc-progress-container" label="Loading..." value="0">
  <!---->
  <progress aria-labelledby="mwc_id_0" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="modus-wc-progress modus-wc-w-full" max="100" value="0"></progress>
  <modus-wc-input-label class="modus-wc-input-label-host">
    <!---->
    <label class="modus-wc-input-label modus-wc-input-label-size-md" id="mwc_id_0">
      Loading...
    </label>
  </modus-wc-input-label>
</modus-wc-progress>
`;

exports[`modus-wc-progress should render with custom props 1`] = `
<modus-wc-progress class="modus-wc-progress-container" custom-class="test-class" indeterminate="" max="50" value="25" variant="radial">
  <!---->
  <div aria-busy="true" aria-label="Custom Progress Bar" class="modus-wc-radial-progress modus-wc-radial-progress--indeterminate test-class" role="progressbar" style="--value: 50;">
    <span class="modus-wc-radial-progress-label"></span>
  </div>
</modus-wc-progress>
`;

exports[`modus-wc-progress should render with default props 1`] = `
<modus-wc-progress class="modus-wc-progress-container" value="0">
  <!---->
  <progress aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="modus-wc-progress modus-wc-w-full" max="100" value="0"></progress>
</modus-wc-progress>
`;
